Добавить feature_subscriptions